# ControleTowerAPI

./: README.md  pyproject.toml  requirements.txt
src/services/: app.py  control_tower.db  db.py  openapi.json  visualizations.py
tests/: airline_id_route_test.py  airlines_route_test.py  airport_id_route_test.py  airports_route_test.py  api_default_pages_test.py  bar_chart_route_test.py  bar_chart_test.py  conftest.py  load_airlines_test.py  load_airports_test.py  load_planes_test.py  load_routes_test.py  planes_route_test.py  routes_route_test.py  scatter_plot_route_test.py  scatter_plot_test.py  setup_db_test.py
